--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,11 +3,15 @@
 // Styles for managing the structural hierarchy of the site.
 
 .container {
-  max-width: 45rem;
+  width: 85%;
   padding-left: var(--spacer-2);
   padding-right: var(--spacer-2);
   margin-left:  auto;
   margin-right: auto;
+}
+
+blockquote, ul {
+  width: 100%;
 }
 
 footer {
