Java_02_Java_Virtual_Machine
자바 가상 머신(JVM), 자바 개발 도구(JDK), 자바 실행 환경(JRE)

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -65,3 +65,28 @@
     }
   }
 }
+
+.image-responsive {
+  max-width: 80%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.image-large, .image-midium {
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+.image-large {
+  max-width: 60vw;
+}
+
+.image-medium {
+  max-width: 40vw;
+}
