--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     {% if page.title == "Home" %}
       {{ site.title }}{% if site.tagline %} &middot; {{ site.tagline }}{% endif %}
     {% else %}
-      {{ page.title }} &middot; {{ site.title }}
+      {{ page.title }}
     {% endif %}
   </title>
 
