--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,6 +3,11 @@
 // Styles for managing the structural hierarchy of the site.
 
 .container {
+  // 직접 설정 : overflow & nowrap
+  white-space: nowrap;
+  overflow-x: scroll;
+
+  // 기본 설정
   width: 85%;
   padding-left: var(--spacer-2);
   padding-right: var(--spacer-2);
