Java_06~10 & Code Theme 적용
Java 06 : 접근 제한자와 패키지
java 07 : 라이브러리와 프레임워크
java 08 : static과 중첩클래스
java 09 : 추상클래스와 인터페이스
java 10 : Thread와 Runnable
Web : sendRedirct와 forward
JavaScript : alert와 dialog
HTML, CSS : Semantic Tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,13 @@
       </footer>
     </div>
 
+    <!-- highlight.js 스크립트 추가 -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
+
     {% if site.ga_analytics %}
     <script>
+
       (function (i, s, o, g, r, a, m) {
         i["GoogleAnalyticsObject"] = r;
         (i[r] =
