--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,5 +15,7 @@
   <link rel="shortcut icon" href="{{ '/assets/image/favicon.ico' | relative_url }}">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ 'atom.xml' | relative_url }}">
 
+  <!-- highlight.js 스타일 추가 (다크 테마) -->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/atom-one-dark.min.css">
   {% seo title=false %}
 </head>
