--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,11 +20,27 @@ layout: default
 
 </article>
 
+
+<div class="pagination">
+  {% if paginator.next_page %}
+    <a class="pagination-item older" href="{{ paginator.next_page_path | relative_url }}">이전 글</a>
+  {% else %}
+    <span class="pagination-item older">이전 글</span>
+  {% endif %}
+  {% if paginator.previous_page %}
+    <a class="pagination-item newer" href="{{ paginator.previous_page_path | prepend: relative_url }}">다음 글</a>
+  {% else %}
+    <span class="pagination-item newer">다음 글</span>
+  {% endif %}
+</div>
+
+
 {% if site.related_posts != empty %}
 <aside class="related">
-  <h3>Related posts</h3>
+  <h3>Another postings</h3>
   <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
+    {% assign reversed_related_posts = site.related_posts | reverse %}
+    {% for post in reversed_related_posts %}
       <li>
         <a href="{{ site.baseurl }}{{ post.url }}">
           {{ post.title }}
