진입 페이지 링크 수정

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -44,6 +44,8 @@ table {
   width: 100%;
   border: 0 solid var(--border-color);
   border-collapse: collapse;
+  // border-bottom-color: currentColor;
+  // border-top-color: currentColor;
 }
 
 td,
