--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -34,6 +34,7 @@ footer {
   text-align: center;
   justify-self: center;
 }
+
 .nav-container {
   display: flex;
   flex-flow: nowrap row;
@@ -44,9 +45,12 @@ footer {
 }
 
 details{
+  // margin-top: 0.5%;
   padding: 0.5%;
 }
 details details {
   border: solid 0.1px gray;
   border-radius: 10px;
+  margin-top: 1%;
+  padding: 1.5%;
 }
