--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,9 +20,9 @@ layout: default
 
 
 <!-- 조회수 확인  -->
-<!-- <a href="https://hits.seeyoufarm.com">
+<a href="https://hits.seeyoufarm.com">
   <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Feasehee.github.io&count_bg=%23555555&title_bg=%23555555&icon=github.svg&icon_color=%23FFFFFF&title=hits&edge_flat=false"/>
-</a> -->
+</a>
 
 
 <article class="post">
