--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -65,3 +65,14 @@ details /* details */ {
 .bg-bk {
   background-color: black;
 }
+
+#tipue_search_content {
+  padding: 5%;
+  min-height: 400px;
+}
+
+.padding {
+  padding: 2%;
+  margin: 2%;
+  box-sizing: border-box;
+}
