--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -33,7 +33,7 @@
   --body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --body-font-size: 16px;
+  --body-font-size: 1rem; // 16px (1102 수정)
   --body-line-height: 1.5;
   --body-color: var(--gray-700);
   --body-bg: #fff;
@@ -75,7 +75,8 @@
 // Dark Poole theme
 [data-theme="dark-poole"] {
   --body-color: var(--dark-poole-002);
-  --body-bg: var(--dark-poole-001);
+  // --body-bg: var(--dark-poole-001);
+  --body-bg: black; // (1030) background-color : black;
   --heading-color: var(--dark-poole-002);
   --link-color: var(--dark-poole-link-color);
   --link-hover-color: var(--dark-poole-link-hover);
