--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -47,6 +47,7 @@ footer {
 details{
   // margin-top: 0.5%;
   padding: 0.5%;
+  // width: fit-content;
 }
 details /* details */ {
   border: solid 0.1px gray;
