--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -48,6 +48,7 @@ details{
   // margin-top: 0.5%;
   padding: 0.5%;
   // width: fit-content;
+  min-width: fit-content;
 }
 details /* details */ {
   border: solid 0.1px gray;
