--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -51,7 +51,8 @@
   --code-color: var(--grape);
   --code-bg: var(--gray-000);
 
-  --spacer: 1rem;
+  --spacer-0: calc(var(--spacer) * 0.7); /* 1117 EaseHee */
+  --spacer: 1rem; 
   --spacer-2: calc(var(--spacer) * 1.5);
   --spacer-3: calc(var(--spacer) * 3);
 }
