--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,15 +46,17 @@ footer {
 
 details{
   // margin-top: 0.5%;
-  padding: 0.5%;
+  // padding: 0.5%;
   // width: fit-content;
   min-width: fit-content;
-}
-details /* details */ {
+// }
+// details /* details */ {
   border: solid 0.1px gray;
   border-radius: 10px;
   margin-top: 1%;
   padding: 1.5%;
+
+  box-sizing: border-box;
 }
 
 .rec {
