--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -2,6 +2,10 @@
 
 <div class="masthead">
   <div class="masthead__inner-wrap">
+    <div>
+      <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Feasehee.github.io&count_bg=%23555555&title_bg=%23555555&icon=github.svg&icon_color=%23FFFFFF&title=hits&edge_flat=false"/>
+    </div>
+
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
         {% unless logo_path == empty %}
