--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,16 @@
     {% include head.html %}
     {% include head/custom.html %}
   </head>
+  
+    <!-- 상단으로 이동하기 버튼 -->
+    <script src="https://unpkg.com/vanilla-back-to-top@7.2.1/dist/vanilla-back-to-top.min.js"></script>
+    <script>
+      addBackToTop({
+        diameter: 56,
+        backgroundColor: 'var(--gray-600)',
+        textColor: '#fff',
+      })
+    </script>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}" dir="{% if site.rtl %}rtl{% else %}ltr{% endif %}">
     {% include_cached skip-links.html %}
