--- a/_sass/minimal-mistakes/_search.scss
+++ b/_sass/minimal-mistakes/_search.scss
@@ -56,7 +56,7 @@
 
   .search-input {
     display: block;
-    margin-bottom: 0;
+    margin-top: 60px; /* 헤더 높이에 맞춰 상단 여백 추가 */
     padding: 0;
     border: none;
     outline: none;
