--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -10,7 +10,7 @@ html {
 
 body {
   margin: 0;
-  margin-top: 60px; /* 헤더 높이에 따라 본문과 겹치지 않게 여백 추가 */
+  // margin-top: 60px; /* 헤더 높이에 따라 본문과 겹치지 않게 여백 추가 */
 
   padding: 0;
   color: $text-color;
