--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -11,7 +11,7 @@
   // @include breakpoint(max-width $large) {
   //   /* fix z-index order of follow links */
   position: relative;
-  top: 120px; /* 헤더 높이에 따라 조정 */
+  // top: 120px; /* 헤더 높이에 따라 조정 */
   //   z-index: 10;
   //   -webkit-transform: translate3d(0, 0, 0);
   //   transform: translate3d(0, 0, 0);
