--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,8 +11,8 @@ search: false
 .toc {
     margin: 20px 0;
     padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
+    // border: 1px solid #ddd;
+    // border-radius: 8px;
 }
   
 .toc ul {
