--- a/_sass/minimal-mistakes/_buttons.scss
+++ b/_sass/minimal-mistakes/_buttons.scss
@@ -18,6 +18,7 @@
   text-decoration: none;
   border-width: 0;
   border-radius: $border-radius;
+  white-space: nowrap;
   cursor: pointer;
 
   .icon {
