--- a/_sass/minimal-mistakes/_tables.scss
+++ b/_sass/minimal-mistakes/_tables.scss
@@ -11,6 +11,8 @@ table {
   border-collapse: collapse;
   overflow-x: auto;
 
+  white-space: nowrap; // 줄바꿈 방지
+  
   & + table {
     margin-top: 1em;
   }
@@ -18,7 +20,7 @@ table {
 
 thead {
   background-color: $border-color;
-  border-bottom: 2px solid mix(#000, $border-color, 25%);
+  border-bottom: 1px solid mix(#000, $border-color, 25%);
 }
 
 th {
